整理初始化数据

--- a/templates/home_application/home.html
+++ b/templates/home_application/home.html
@@ -1,25 +1,219 @@
 <%inherit file="/base.html"/>
 
 <%block name="content">
-    <div class="home-page">
-    	<div class="page-arrow">
-			<div class="container">
-				<!-- 蓝鲸智云开发框架说明  Start -->
-				<div class="tc title-word">
-					<p>欢迎使用蓝鲸智云集成平台</p>
-				</div>
-				<div class="tc title-word-second">
-					<p>蓝鲸智云开发框架<small class="pl10">助力你的自动化</small></p>
-				</div>
-				<hr class="cutting-line">
-				<div class="tc frame-explain-text">
-					<p>您现在打开的应用是由蓝鲸智云示例代码生成的，该示例代码称为“APP开发框架”。</p>
-					<p>蓝鲸智云集成平台（PaaS）提供了完善的前后台开发框架、调度引擎、公共组件等模块，帮助业务的产品和技术人员快速构建低成本、免运维的支撑工具和运营系统。</p>
-					<p>若想体验快速开发应用的功能，请前往<a class="developer-center" href="${BK_PAAS_HOST}" target="_blank">“开发者中心”</a>。</p>
-				</div>
-				<!-- 蓝鲸智云开发框架说明  End -->
-			</div>
-		</div>
+
+<!-- 初始化 -->
+
+    <div class="home-page" id="app">
+        <div class="cw-search-box">
+            <i-form :model="searchInfo" label-position="right" :label-width="80" class="flex">
+                <form-item label="名称:">
+                    <i-input v-model="searchInfo.name" clearable></i-input>
+                </form-item>
+                <form-item label=" 请选择业务:">
+                        <i-select v-model="searchInfo.business" clearable>
+                            <i-option :value="item.value" v-for="(item,index) in business" :key="index">{{item.label}}</i-option>
+                        </i-select>
+                </form-item>
+
+          </i-form>
+            <i-button type="primary" class="btn" @click="createDate=true">新增</i-button>
+            <i-button type="primary" class="btn" @click="search">查询</i-button>
+        </div>
+
+        <!-- 新建 -->
+        <Drawer title="新建脚本"
+            v-model="createDate"
+            :closable="false"
+            :mask-closable="false"
+            width="800">
+            <div style="padding: 0 15px">
+                <i-form
+                    :model="formItem"
+                    ref="formItem"
+                    :rules="ruleValidate"
+                    :label-width="100">
+                    <Form-item label="脚本名称：" prop="name">
+                        <i-input v-model="formItem.name" placeholder="请输入..."></i-input>
+                    </Form-item>
+                    <Form-item label="脚本描述：">
+                        <i-input v-model="formItem.desc" type="textarea" placeholder="请输入..."></i-input>
+                    </Form-item>
+                    <Form-item>
+                        <div class="cw-btn-group">
+                            <i-button type="primary" @click="create" style="margin-right: 15px">确定</i-button>
+                            <i-button type="normal" @click="cancel">取消</i-button>
+                        </div>
+                    </Form-item>
+                </i-form>
+            </div>
+        </Drawer>
+
+        <i-table :columns="columns" :data="data"></i-table>
+
     </div>
 </%block>
+<script>
+     new Vue({
+         el: '#app',
+         data: function () {
+             return {
+                 createDate:false,
+                 data:[],
+                 business:[],
+                 searchInfo: {
+                    business: '',
+                     name:'',
+                    },
+                 formItem:{
+                     name:'',
+                     desc:'',
+                 },
+                 columns: [
+                    {
+                        title: '名称',
+                        key: 'name'
+                    },
+                     {
+                        title: '业务',
+                        key: 'business'
+                    },
+                    {
+                        title: '操作',
+                        key: 'actiono',
+                        render: (h, params) => {
+                            return h('div', [
+                                h('Button', {
+                                    props: {
+                                        type: 'primary',
+                                        size: 'small'
+                                    },
+                                    style: {
+                                        marginRight: '5px'
+                                    },
+                                    on: {
+                                        click: () => {
+                                            this.show_data(params.row)
+                                        }
+                                    }
+                                }, '详情'),
+                            h('Button', {
+                                    props: {
+                                        type: 'primary',
+                                        size: 'error'
+                                    },
+                                    style: {
+                                        marginRight: '5px'
+                                    },
+                                    on: {
+                                        click: () => {
+                                            this.delete_data(params.row.id)
+                                        }
+                                    }
+                                }, '删除'),
+                            ]);
+                        }
+                    }
+                ],
+               ruleValidate: {
+                    name: [
+                        { required: true, message: '脚本名称不能为空', trigger: 'blur' }
+                    ],
+                    business: [
+                        { required: true, message: '脚本内容不能为空', trigger: 'blur' }
+                    ],
+                },
+             }
+         },
+          methods: {
+             //查询业务
+             search_biz(){
+                axios.get(site_url+ "search_biz/").then(res=>{
+                    this.business = res.data.data
+                })
+            },
+              //删除
+              delete_data(row){
+                axios.post(site_url + "delete/"+row).then(
+                   res => {
+                     this.cancel()
+                    if (res.data.result) {
+                        this.$Message.success('删除成功');
+                    } else {
+                        this.$Message.error('删除失败');
+                    }
+                    this.search()
+               } )
+              },
+          // 创建
+            handleCreate() {
+                this.$refs['formItem'].validate((valid) => {
+                    if (valid) {
+                        this.create()
+                    } else {
+                        this.$Message.error('表单存在未填字段!');
+                    }
+                })
+            },
+          create(){
+                axios.post(site_url + "add",this.formItem).then(
+                   res => {
+                     this.cancel()
+                    if (res.data.result) {
+                        this.$Message.success('添加成功');
+                    } else {
+                        this.$Message.error('添加失败');
+                    }
+                    this.search()
+               } )
+          },
+          //显示详情
+          show_data(row){
+            axios.get(site_url+ "one/"+this.searchInfo.business,{
+                    params: row
+                }).then(res=>{
+                    var data = res.data.data
+                    this.$set(row, 'MEMORY', data.MEMORY)
+                    this.$set(row, 'DISK', data.DISK)
+                    this.$set(row, 'CPU', data.CPU)
+                })
+          },
+            // 条件查询
+            search(){
+                axios.get(site_url+ "list",{
+                    params: this.searchInfo
+                }).then(res=>{
+                    this.data = res.data.data
+                })
+            },
+          cancel(){
+              this.createDate = false
+          },
+          },
+        created() {
+            this.search_biz()
+            this.search()
+        }
+     })
+</script>
+<style>
+ .flex{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .ivu-form-item{
+        flex: 0 0 30%;
+    }
 
+    .ivu-date-picker{
+        width: 100%;
+    }
+
+    .btn{
+        margin:0 0 20px 25px;
+    }
+
+    .cw-btn-group{
+        text-align: center;
+    }
+</style>
